--- a/.github/workflows/release-to-production-reusable.yml
+++ b/.github/workflows/release-to-production-reusable.yml
@@ -43,9 +43,9 @@ on:
       AAD_TENANT_ID:
         description: 'The tenant ID of the AAD application for authentication'
         required: true
-#      BUILD_ENVIRONMENT_URL:
-#        description: 'Build environment url.'
-#        required: true      
+      BUILD_ENVIRONMENT_URL:
+        description: 'Build environment url.'
+        required: true      
       PRODUCTION_ENVIRONMENT_URL: 
         description: 'Production environment url.'
         required: true  
