--- a/.github/workflows/export-solution-reusable.yml
+++ b/.github/workflows/export-solution-reusable.yml
@@ -84,7 +84,7 @@ jobs:
       with:
         solution-file: ${{ inputs.SOLUTION_EXPORTS_FOLDER }}${{ inputs.SOLUTION_NAME }}.zip
         solution-folder: ${{ inputs.SOLUTION_OUTBOUND_FOLDER }}${{ inputs.SOLUTION_NAME }}
-        solution-type: 'Unmanaged'
+        solution-type: 'Managed'
         overwrite-files: true
 
     - name: branch-solution, prepare it for a PullRequest
