--- a/.github/workflows/export-solution-reusable.yml
+++ b/.github/workflows/export-solution-reusable.yml
@@ -76,7 +76,6 @@ jobs:
         tenant-id: ${{ secrets.AAD_TENANT_ID }}
         cloud: ${{ inputs.CLOUD_TYPE }}
         solution-name: ${{ inputs.SOLUTION_NAME }}
-        managed: true
         solution-output-file: ${{ inputs.SOLUTION_EXPORTS_FOLDER }}${{ inputs.SOLUTION_NAME }}.zip
 
     - name: unpack-solution action
@@ -84,7 +83,7 @@ jobs:
       with:
         solution-file: ${{ inputs.SOLUTION_EXPORTS_FOLDER }}${{ inputs.SOLUTION_NAME }}.zip
         solution-folder: ${{ inputs.SOLUTION_OUTBOUND_FOLDER }}${{ inputs.SOLUTION_NAME }}
-        solution-type: 'Managed'
+        solution-type: 'Unmanaged'
         overwrite-files: true
 
     - name: branch-solution, prepare it for a PullRequest
