--- a/.github/workflows/release-default-approval.yml
+++ b/.github/workflows/release-default-approval.yml
@@ -21,6 +21,5 @@ jobs:
       AAD_TENANT_ID: ${{ secrets.AAD_TENANT_ID }}
       
       # Update here with your actual build and production environment URLs
-      ###BUILD_ENVIRONMENT_URL: ${{ secrets.BUILD_ENVIRONMENT_URL }}
-      DEV_ENVIRONMENT_URL: ${{ secrets.DEV_ENVIRONMENT_URL }}
+      BUILD_ENVIRONMENT_URL: ${{ secrets.BUILD_ENVIRONMENT_URL }}
       PRODUCTION_ENVIRONMENT_URL: ${{ secrets.PROD_ENVIRONMENT_URL }}
