--- a/.github/workflows/release-default-approval.yml
+++ b/.github/workflows/release-default-approval.yml
@@ -19,6 +19,9 @@ jobs:
       AAD_APP_SECRET: ${{ secrets.AAD_APP_SECRET }}
       AAD_CLIENT_ID: ${{ secrets.AAD_CLIENT_ID }}
       AAD_TENANT_ID: ${{ secrets.AAD_TENANT_ID }}
+      # User credientials
+      CONNECTION_USER_OWNER_P: ${{ secrets.CONNECTION_USER_OWNER_P }}
+      CONNECTION_USER_OWNER_U: ${{ secrets.CONNECTION_USER_OWNER_U }}
       
       # Update here with your actual build and production environment URLs
       BUILD_ENVIRONMENT_URL: ${{ secrets.BUILD_ENVIRONMENT_URL }}
