username and password option

--- a/.github/workflows/release-to-production-reusable.yml
+++ b/.github/workflows/release-to-production-reusable.yml
@@ -48,6 +48,12 @@ on:
       PRODUCTION_ENVIRONMENT_URL: 
         description: 'Production environment url.'
         required: true  
+      CONNECTION_USER_OWNER_P:
+        description: 'User authentication'
+        required: false
+      CONNECTION_USER_OWNER_U:
+        description: 'User authentication'
+        required: false
 
 jobs:
   convert-to-managed:
@@ -72,8 +78,10 @@ jobs:
       uses: microsoft/powerplatform-actions/import-solution@v0
       with:
         environment-url: ${{secrets.BUILD_ENVIRONMENT_URL}}
-        app-id: ${{secrets.AAD_CLIENT_ID}}
-        client-secret: ${{ secrets.AAD_APP_SECRET }}
+        ###app-id: ${{secrets.AAD_CLIENT_ID}}
+        ###client-secret: ${{ secrets.AAD_APP_SECRET }}
+        user-name: CONNECTION_USER_OWNER_U
+        password-secret: CONNECTION_USER_OWNER_P
         tenant-id: ${{secrets.AAD_TENANT_ID}}
         cloud: ${{inputs.CLOUD_TYPE}}
         solution-file: ${{ inputs.SOLUTION_OUTBOUND_FOLDER}}/${{ inputs.SOLUTION_NAME }}.zip
@@ -84,8 +92,10 @@ jobs:
       uses: microsoft/powerplatform-actions/export-solution@v0
       with:
         environment-url: ${{secrets.BUILD_ENVIRONMENT_URL}}
-        app-id: ${{secrets.AAD_CLIENT_ID}}
-        client-secret: ${{ secrets.AAD_APP_SECRET }} 
+        ###app-id: ${{secrets.AAD_CLIENT_ID}}
+        ###client-secret: ${{ secrets.AAD_APP_SECRET }} 
+        user-name: CONNECTION_USER_OWNER_U
+        password-secret: CONNECTION_USER_OWNER_P
         tenant-id: ${{secrets.AAD_TENANT_ID}}
         cloud: ${{inputs.CLOUD_TYPE}}
         solution-name: ${{ inputs.SOLUTION_NAME }}
@@ -118,8 +128,10 @@ jobs:
       uses: microsoft/powerplatform-actions/import-solution@v0
       with:
         environment-url: ${{secrets.PRODUCTION_ENVIRONMENT_URL}}
-        app-id: ${{secrets.AAD_CLIENT_ID}}
-        client-secret: ${{ secrets.AAD_APP_SECRET }}
+        ###app-id: ${{secrets.AAD_CLIENT_ID}}
+        ###client-secret: ${{ secrets.AAD_APP_SECRET }}
+        user-name: CONNECTION_USER_OWNER_U
+        password-secret: CONNECTION_USER_OWNER_P
         tenant-id: ${{secrets.AAD_TENANT_ID}}
         cloud: ${{inputs.CLOUD_TYPE}}
         solution-file: ${{ inputs.SOLUTION_RELEASE_FOLDER}}/${{ inputs.SOLUTION_NAME }}_managed.zip
