--- a/.github/workflows/release-to-production-reusable.yml
+++ b/.github/workflows/release-to-production-reusable.yml
@@ -80,7 +80,7 @@ jobs:
         environment-url: ${{secrets.BUILD_ENVIRONMENT_URL}}
         ###app-id: ${{secrets.AAD_CLIENT_ID}}
         ###client-secret: ${{ secrets.AAD_APP_SECRET }}
-        user-name: CONNECTION_USER_OWNER_U
+        user-name: AlexW@02pby.onmicrosoft.com
         password-secret: CONNECTION_USER_OWNER_P
         tenant-id: ${{secrets.AAD_TENANT_ID}}
         cloud: ${{inputs.CLOUD_TYPE}}
