--- a/.github/workflows/release-to-production-reusable.yml
+++ b/.github/workflows/release-to-production-reusable.yml
@@ -75,7 +75,7 @@ jobs:
         solution-type: Unmanaged
 
     - name: Import solution as unmanaged to build env
-      uses: microsoft/powerplatform-actions/import-solution@v0
+      uses: microsoft/powerplatform-actions/import-solution@main
       with:
         environment-url: ${{secrets.BUILD_ENVIRONMENT_URL}}
         ###app-id: ${{secrets.AAD_CLIENT_ID}}
