--- a/.github/workflows/release-to-production-reusable.yml
+++ b/.github/workflows/release-to-production-reusable.yml
@@ -80,8 +80,8 @@ jobs:
         environment-url: ${{secrets.BUILD_ENVIRONMENT_URL}}
         ###app-id: ${{secrets.AAD_CLIENT_ID}}
         ###client-secret: ${{ secrets.AAD_APP_SECRET }}
-        user-name: AlexW@02pby.onmicrosoft.com
-        password-secret: CONNECTION_USER_OWNER_P
+        user-name: ${{secrets.CONNECTION_USRE_OWNER_U}} #AlexW@02pby.onmicrosoft.com
+        password-secret: ${{secrets.CONNECTION_USER_OWNER_P}}
         tenant-id: ${{secrets.AAD_TENANT_ID}}
         cloud: ${{inputs.CLOUD_TYPE}}
         solution-file: ${{ inputs.SOLUTION_OUTBOUND_FOLDER}}/${{ inputs.SOLUTION_NAME }}.zip
@@ -94,8 +94,8 @@ jobs:
         environment-url: ${{secrets.BUILD_ENVIRONMENT_URL}}
         ###app-id: ${{secrets.AAD_CLIENT_ID}}
         ###client-secret: ${{ secrets.AAD_APP_SECRET }} 
-        user-name: CONNECTION_USER_OWNER_U
-        password-secret: CONNECTION_USER_OWNER_P
+        user-name: ${{secrets.CONNECTION_USER_OWNER_U}}
+        password-secret: ${{secrets.CONNECTION_USER_OWNER_P}}
         tenant-id: ${{secrets.AAD_TENANT_ID}}
         cloud: ${{inputs.CLOUD_TYPE}}
         solution-name: ${{ inputs.SOLUTION_NAME }}
@@ -130,8 +130,8 @@ jobs:
         environment-url: ${{secrets.PRODUCTION_ENVIRONMENT_URL}}
         ###app-id: ${{secrets.AAD_CLIENT_ID}}
         ###client-secret: ${{ secrets.AAD_APP_SECRET }}
-        user-name: CONNECTION_USER_OWNER_U
-        password-secret: CONNECTION_USER_OWNER_P
+        user-name: ${{secrets.CONNECTION_USER_OWNER_U}}
+        password-secret: ${{secrets.CONNECTION_USER_OWNER_P}}
         tenant-id: ${{secrets.AAD_TENANT_ID}}
         cloud: ${{inputs.CLOUD_TYPE}}
         solution-file: ${{ inputs.SOLUTION_RELEASE_FOLDER}}/${{ inputs.SOLUTION_NAME }}_managed.zip
